# angsd-io

./: Cargo.toml  README.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: lib.rs
examples/: glf_read.rs  glf_write.rs  saf_intersect.rs  saf_read.rs  saf_write.rs
glf/: Cargo.toml
glf/examples/: glf_read.rs  glf_write.rs
glf/src/: lib.rs
glf/src/record/: genotype.rs
saf/: Cargo.toml
saf/examples/: saf_intersect.rs  saf_read.rs  saf_v3_intersect.rs  saf_v3_read.rs  saf_v4_read.rs  saf_write.rs
saf/src/: ext.rs  index.rs  lib.rs  reader.rs  record.rs  version.rs  writer.rs
saf/src/index/: record.rs  traits.rs
saf/src/reader/: builder.rs  intersect.rs
saf/src/writer/: traits.rs
saf/tests/: intersect.rs  seek.rs  utils.rs  write_then_read.rs
src/: glf.rs  lib.rs  read.rs  saf.rs
src/glf/: reader.rs  record.rs  writer.rs
src/glf/record/: genotype.rs
src/saf/: ext.rs  index.rs  reader.rs  record.rs  version.rs  writer.rs
src/saf/index/: reader.rs  record.rs  traits.rs  writer.rs
src/saf/reader/: intersect.rs  position_reader.rs  traits.rs  value_reader.rs
src/saf/writer/: item_writer.rs  position_writer.rs  value_writer.rs
