[package]
name = "angsd-io"
version = "0.1.0"
authors = ["Malthe Sebro Rasmussen <malthesebro@protonmail.com>"]
edition = "2021"
license = "MIT"
description = "Reading and writing of binary file formats associated with ANGSD"
homepage = "https://github.com/malthesr/angsd-io"
repository = "https://github.com/malthesr/angsd-io"

[features]
default = []
libdeflate = ["bgzf/libdeflater"]

[dependencies]
bgzf = { package = "noodles-bgzf", version = "0.12" }
byteorder = "1.4"
indexmap = "1.8"
