[package]
name = "angsd-glf"
version = "0.1.0"
authors = ["Malthe Sebro Rasmussen <malthesebro@protonmail.com>"]
edition = "2021"
license = "MIT"
description = "Reading and writing of ANGSD GLF file format"
homepage = "https://github.com/malthesr/angsd-io/glf"
repository = "https://github.com/malthesr/angsd-io/glf"

[features]
default = []
libdeflate = ["bgzf/libdeflater"]

[dependencies]
angsd-io-core = { path = "../core" }
# TODO: Update to 0.15 once released; 0.14 has bug in read+seek multithreaded,
# see github.com/zaeleus/noodles/issues/112
bgzf = { package = "noodles-bgzf", git = "https://github.com/zaeleus/noodles.git", rev = "531273d" }
byteorder = "1.4"
